--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,20 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven {
+        url 'https://repo.clojars.org'
+        name 'Clojars'
+    }
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    implementation group: 'org.sql2o', name: 'sql2o', version: '1.5.4'
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
-    implementation group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'top.jfunc.json:Json-Gson:1.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    implementation group: 'org.sql2o', name: 'sql2o', version: '1.6.0'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
+    implementation group: 'postgresql', name: 'postgresql', version: '9.3-1102.jdbc41'
 }
 
 test {
