--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.example'
@@ -13,6 +14,12 @@ repositories {
     }
 }
 
+mainClassName= 'App'
+
+sourceCompatibility= 1.8
+applicationName='organisational-new-portal'
+
+
 dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'top.jfunc.json:Json-Gson:1.0'
@@ -21,8 +28,18 @@ dependencies {
     implementation group: 'org.sql2o', name: 'sql2o', version: '1.6.0'
     implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.3'
     implementation group: 'postgresql', name: 'postgresql', version: '9.3-1102.jdbc41'
+    implementation 'org.slf4j:slf4j-simple:1.7.36'
+    implementation "com.sparkjava:spark-core:2.9.3" // add to build.gradle (for Java users)
+    implementation 'org.sql2o:sql2o:1.5.4'
+    implementation 'joda-time:joda-time:2.10.13'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.sparkjava:spark-core:2.9.3'
+    implementation 'org.sql2o.extensions:sql2o-postgres:1.6.0'
+    implementation 'org.sql2o:sql2o:1.6.0'
+    implementation 'org.sql2o:sql2o-parent:1.6.0'
 }
 
 test {
     useJUnitPlatform()
 }
+task stage(dependsOn: ['clean', 'installDist'])
